tweaks to manuscript - Abstract bringing in conservation importance earlier; refs adding note on how to include DOIs; discussion - clarifying percents in MPA gap analysis, noting questions about AquaMaps citations, and question about the top right cluster - should it be noted more directly

--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -26,7 +26,7 @@ Knowing where individuals of a species live is fundamental to the sciences of ec
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) (IUCN 2015).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm et al. 2014 _IUCN, mostly focusing on terrestrial but some marine_, Kaschner et al. 2011), predicting range shifts (Molinos et al. 2015 _AquaMaps_, and setting conservation priorities (Klein et al. 2015 _AquaMaps_).
+One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. ___2013???___) and International Union for Conservation of Nature (IUCN) (IUCN 2015).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm et al. 2014 _IUCN, mostly focusing on terrestrial but some marine_, Kaschner et al. 2011), predicting range shifts (Molinos et al. 2015 _AquaMaps_, and setting conservation priorities (Klein et al. 2015 _AquaMaps_).
 
 ___BSH:___ _I think Julie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?_  
 
@@ -87,6 +87,8 @@ dp_med_occ_q123 <- quad_count_means$med_occ_total[1]
 
 To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). A general negative linear pattern emerges, <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> suggesting that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
+___directly address the cluster along the top right of the plot?___
+
 By dividing the map-paired species into quadrants, we highlight different categories of relationships that in turn help further explain the general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges agree in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
 
 The extent-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. <!-- BSH: maybe include 2-3 examples as figures in the SOM and refer to them here.-->
@@ -114,7 +116,7 @@ We recalculated the OHI species status score under several scenarios to observe 
 
 Klein et al. (2015) compared the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and to identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  The study determined that currently established MPAs (IUCN categories I through IV overlapping with marine areas) are woefully inadequate in protecting marine biodiversity; 90.5% of species have less than 5% of their overall range represented within MPAs and 1.4% of species have no protection at all ("gap" species).
 
- (<a href = '#fig4'>Figure 4</a>) displays the results of applying this methodology under several different scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 data and a 0% threshold sets the most meaningful comparison) we found a five-fold increase in the proportion of gap species (6.4% vs 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network.
+ (<a href = '#fig4'>Figure 4</a>) displays the results of applying this methodology under several different scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 data and a 0% threshold sets the most meaningful comparison) we found a five-fold increase in the proportion of gap species (6.4% of species vs 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network.
 
 -----
 
