--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -3,7 +3,7 @@
 
 _Abstract. Provide an abstract of no more than 250 words on page 2 of the manuscript. Abstracts should explain to the general reader the major contributions of the article. References in the abstract must be cited in full within the abstract itself and cited in the text._
 
-Species distribution data provide the foundation for a wide range of ecological research and conservation science and management, yet most species ranges remain unknown, and existing range maps have little overlap. In the ocean, two global species distribution datasets, produced by AquaMaps (REF) and the International Union for Conservation of Nature (IUCN) (REF), dominate our understanding of marine species ranges throughout the world's oceans.  Together they represent `r format(n_spp_all, big.mark = ',')` species, mostly from AquaMaps, with only `r format(n_spp_both, big.mark = ',')` species overlapping.  Here we examine differences in predicted species ranges between the two datasets, propose mechanistic causes and potential solutions for such differences, and explore the implications of these differences for management and conservation decisions.  We find that IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps ranges for data-poor species often extrapolate presence far afield from known occurrences.  We illustrate the implications of these differences by repeating two recent applications - the Ocean Health Index (Halpern et al. 2012, 2015) biodiversity goal and a global analysis of gaps in coverage of marine protected areas (Klein et al. 2015) - and find significantly different estimates of the status of global biodiversity and effectiveness of conservation depending on how the two datasets were prioritized. ___Creating a single, highly accurate dataset of global marine species ranges will be difficult. Understanding the implications of dataset differences for conservation planning and decision-making is essential.___
+Species distribution data provide the foundation for a wide range of ecological research and conservation science and management, yet most species ranges remain unknown, and existing range maps have little overlap. In the ocean, two global species distribution datasets, produced by AquaMaps (Kaschner et al. ___2015???___) and the International Union for Conservation of Nature (IUCN) (IUCN 2015), dominate our understanding of marine species ranges throughout the world's oceans ___and drive conservation policy and management decisions___.  Together they represent `r format(n_spp_all, big.mark = ',')` species, mostly from AquaMaps, with only `r format(n_spp_both, big.mark = ',')` species overlapping.  Here we examine differences in predicted species ranges between the two datasets, propose mechanistic causes and potential solutions for such differences, and explore the implications of these differences for management and conservation decisions.  We find that IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps ranges for data-poor species often extrapolate presence far afield from known occurrences.  We illustrate the implications of these differences by repeating two recent applications - the Ocean Health Index (Halpern et al. 2012, 2015) biodiversity goal and a global analysis of gaps in coverage of marine protected areas (Klein et al. 2015) - and find significantly different estimates of the status of global biodiversity and effectiveness of conservation depending on how the two datasets were prioritized. ___Creating a single, highly accurate dataset of global marine species ranges will be difficult. Understanding the implications of dataset differences for conservation planning and decision-making is essential.___
 
 <!--Understanding these issues points toward solutions for providers and users of these datasets.-->
 
