--- a/data_explore/data_explore.Rmd
+++ b/data_explore/data_explore.Rmd
@@ -32,24 +32,6 @@ source('data_explore_fxns.R')
 ### the 'setwd()' is there for running by chunk
 ```
 
-```{r read_am_and_iucn_data, echo = FALSE, warning = FALSE, message = FALSE, results = 'hide'}
-
-# Data files
-#iucn spp cells WITHOUT extinct locations of IUCN subpopulations
-iucn_spp_cells <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/iucn_spp_cells_2015.csv'), 
-                           progress = TRUE,
-                           col_types = 'cddddc')
-
-am_spp_cells   <- read_csv(file.path(dir_anx, 'explore_am_v_iucn/am_spp_cells_2015.csv'), 
-                           progress = TRUE)
-
-
-### LOICZID cell ID numbers - used in plotting rasters
-loiczid_raster_file  <- file.path(dir_git, 'shiny/data/loiczid_raster.grd')
-loiczid_raster       <- raster(loiczid_raster_file)
-names(loiczid_raster) <- 'loiczid'
-```
-
 
 ```{r get_spp_list, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
 ### this file created in data_prep
@@ -65,6 +47,7 @@ spp_list <- read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv'))
 
 ``` {r, child = 'data_explore_pt2.Rmd', eval = FALSE}
 ```
+<!-- percent overlap vs total area exploration -->
 
 ***
 
@@ -73,8 +56,8 @@ Quadrant map and quad breakdown by taxa and risk
 ``` {r pct_overlap_vs_ratio_of_area, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
 
 ### define 25%, 50%, and 75% quartiles for both x and y axes
-area_ratio_quartiles <- quantile(spp_list$area_ratio, na.rm = TRUE)[2:4]
-pct_overlap_quartiles <- quantile(spp_list$sm_perc, na.rm = TRUE)[2:4]
+area_align_med <- median(spp_list$area_ratio, na.rm = TRUE)
+dist_align_med <- median(spp_list$sm_perc, na.rm = TRUE)
 
 ### define representative species from each quadrant, for over-plotting
 # spp_quads <- c('q1' = 'Kajikia albida', 
@@ -99,14 +82,26 @@ scatter_arearatio_vs_overlap <- ggplot(spp_list %>%
                                            size = lg_area_pct)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
-                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "green4")  + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
-                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "greenyellow") + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
-                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orange") + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
-                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orangered2") + 
+    annotate("rect", xmin = area_align_med, xmax = 100, 
+                     ymin = dist_align_med, ymax = 100, 
+             alpha = .3, 
+#             fill= "green4")  + 
+             fill= "#4dac26")  + 
+    annotate("rect", xmax = area_align_med, xmin =   0, 
+                     ymin = dist_align_med, ymax = 100, 
+             alpha = .3, 
+#             fill= "greenyellow") + 
+             fill= "#b8e186") + 
+    annotate("rect", xmin = area_align_med, xmax = 100, 
+                     ymax = dist_align_med, ymin =   0, 
+             alpha = .3, 
+#             fill= "orange") + 
+             fill= "#f1b6da") + 
+    annotate("rect", xmax = area_align_med, xmin =   0, 
+                     ymax = dist_align_med, ymin =   0, 
+             alpha = .3, 
+#             fill= "orangered2") + 
+             fill= "#d01c8b") + 
   geom_point(alpha = .6)
 
 ### Manage scales for color and size 
@@ -120,40 +115,38 @@ scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
   scale_size_continuous(limits = c(0, 100),
                         breaks = c( 0,    25,    50,    75,    100), 
                         labels = c('0%', '25%', '50%', '75%', '100%')) + 
-  scale_x_continuous(expand = c(0, 0), limits = c(0, 100)) +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100))
+  scale_x_continuous(expand = c(0, 0), 
+                     limits = c(0, 102),
+                     breaks = c(seq(0, 100, 25))) +
+  scale_y_continuous(expand = c(0, 0),
+                     limits = c(0, 102),
+                     breaks = c(seq(0, 100, 25)))
+
   
 ### here are median labels:
 scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
   annotate(geom = 'text',
-           x = area_ratio_quartiles[2], y = 5,
+           x = area_align_med, y = 5,
            hjust = 0, vjust = 0,
            color = 'grey30', 
            size = 2,
            fontface = 'bold.italic', angle = 90,
-           label = sprintf('Median = %s%%', round(area_ratio_quartiles[2], 1))) +
+           label = sprintf('Median = %s%%', round(area_align_med, 1))) +
   annotate(geom = 'text',
-           x = 5, y = pct_overlap_quartiles[2],
+           x = 5, y = dist_align_med,
            hjust = 0, vjust = 0,
            color = 'grey30', 
            size = 2,
            fontface = 'bold.italic', angle = 0,
-           label = sprintf('Median = %s%%', round(pct_overlap_quartiles[2], 1)))
+           label = sprintf('Median = %s%%', round(dist_align_med, 1)))
   
 ### here are median lines:
 # scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
-#   geom_vline(x = area_ratio_quartiles[2],
+#   geom_vline(x = area_align_med,
 #              color = 'grey50', linetype = 'dashed') +
-#   geom_hline(y = pct_overlap_quartiles[2],
+#   geom_hline(y = dist_align_med,
 #              color = 'grey50', linetype = 'dashed')
 
-### here are 25% and 75% quantile lines:
-# scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
-#   geom_vline(x = area_ratio_quartiles[c(1, 3)],
-#              color = 'grey50', linetype = 'dashed') +
-#   geom_hline(y = pct_overlap_quartiles[c(1, 3)],
-#              color = 'grey50', linetype = 'dashed')
-  
 ### here are individual species, identified and named on the plot:
 # scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
 #   geom_point(data = spp_list_label, shape = 4, color = 'grey30', size = 4) + 
@@ -174,84 +167,6 @@ scatter_arearatio_vs_overlap <- scatter_arearatio_vs_overlap +
 print(scatter_arearatio_vs_overlap)
 
 ggsave(file.path(dir_fig, 'AreaRatiovsPercOverlap.png'), width = 17.8, height = 9, units = 'cm')
-
-```
-
-``` {r pct_overlap_vs_ratio_of_area_w_data_poor, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
-
-spp_list <- spp_list %>% 
-  mutate(data_poor = ifelse(occurcells < 10, '< 10', '>= 10'))
-### mongo plot time
-scatter_arearatio_vs_overlap2 <- ggplot(spp_list %>% 
-                                         transform(popn_category = reorder(popn_category, category_score)),
-                                       aes(x = area_ratio, y = sm_perc, 
-                                           color = data_poor,
-                                           size = lg_area_pct)) + 
-  ggtheme_plot + 
-  ### color the quadrant backgrounds:
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
-                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "green4")  + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
-                     ymin = pct_overlap_quartiles[2], ymax = 100, alpha = .3, fill= "greenyellow") + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
-                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orange") + 
-    annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
-                     ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orangered2") + 
-  geom_point(alpha = .6)
-
-### Manage scales for color and size 
-scatter_arearatio_vs_overlap2 <- scatter_arearatio_vs_overlap2 +
-  scale_colour_manual(values = c('>= 10' = 'green4', 
-                                 '< 10'  = 'orangered2')) + 
-  scale_size_continuous(limits = c(0, 100),
-                        breaks = c( 0,    25,    50,    75,    100), 
-                        labels = c('0%', '25%', '50%', '75%', '100%')) + 
-  scale_x_continuous(expand = c(0, 0), limits = c(0, 100)) +
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100))
-  
-### here are median labels:
-scatter_arearatio_vs_overlap2 <- scatter_arearatio_vs_overlap2 +
-  annotate(geom = 'text',
-           x = area_ratio_quartiles[2], y = 5,
-           hjust = 0, vjust = 0,
-           color = 'grey30', 
-           size = 2,
-           fontface = 'bold.italic', angle = 90,
-           label = sprintf('Median = %s%%', round(area_ratio_quartiles[2], 1))) +
-  annotate(geom = 'text',
-           x = 5, y = pct_overlap_quartiles[2],
-           hjust = 0, vjust = 0,
-           color = 'grey30', 
-           size = 2,
-           fontface = 'bold.italic', angle = 0,
-           label = sprintf('Median = %s%%', round(pct_overlap_quartiles[2], 1)))
-  
-scatter_arearatio_vs_overlap2 <- scatter_arearatio_vs_overlap2 +
-  labs(x = bquote('Extent alignment '*alpha['ext']*' (%)'), 
-       y = bquote('Distribution alignment '*alpha['dist']*' (%)'), 
-#       title = 'Distribution alignment vs Extent alignment',
-       color = 'AM model cells', size = '% ocean range') 
-
-print(scatter_arearatio_vs_overlap2)
-
-ggsave(file.path(dir_fig, 'AreaRatiovsPercOverlap-data_poor.png'), width = 17.8, height = 9, units = 'cm')
-
-```
-
-``` {r plot_spp_from_quadrants, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
-
-for (i in 1:length(spp_quads)) { # i = 1
-  spp <- spp_quads[i]
-  spp_quad <- names(spp_quads)[i]
-  
-  spp_plot <- plot_rangemap(spp)
-  print(spp_plot)
-  
-  ggsave(filename = file.path(dir_fig, sprintf('rangemap_%s_%s.png', spp_quad,
-                                               str_replace(tolower(spp), ' ', '_'))),
-         plot = spp_plot, 
-         width = 8, height = 4, dpi = 200)
-}
 
 ```
 
@@ -323,15 +238,19 @@ barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>%
                                 aes(x = spp_group_text, fill = quad, weight = pct_quad)) +
   ggtheme_plot + 
   theme(panel.grid.major.y = element_blank()) +
-  geom_bar(stat = 'count', alpha = .5) +
-  scale_fill_manual(values = c('q1 well-matched'   = 'green4', 
-                               'q2 dist-matched'   = 'greenyellow', 
-                               'q3 area-matched'   = 'orange', 
-                               'q4 poorly matched' = 'orangered2')) +
+  geom_bar(stat = 'count', alpha = .8) +
+  scale_fill_manual(values = c('q1 well-matched'   = '#4dac26', 
+                               'q2 dist-matched'   = '#b8e186', 
+                               'q3 area-matched'   = '#f1b6da', 
+                               'q4 poorly matched' = '#d01c8b')) +
+#   scale_fill_manual(values = c('q1 well-matched'   = 'green4', 
+#                                'q2 dist-matched'   = 'greenyellow', 
+#                                'q3 area-matched'   = 'orange', 
+#                                'q4 poorly matched' = 'orangered2')) +
   scale_y_continuous(expand = c(0, 0), limits = c(0, 1.1)) +
   geom_text(aes(label = sprintf('n = %s', n_spp), y = 1.01), hjust = 0, 
             size = 2, 
-            color = 'grey20') +
+            color = 'grey30') +
   coord_flip() +
   labs(x = 'Taxonomic Group', 
        y = 'Relative proportion of species per quadrant', 
@@ -348,7 +267,7 @@ write_csv(spp_gp_quadrants, file.path(dir_data, 'spp_gp_quads.csv'))
 ```
 
 
-``` {r examine_risk_quartiles, echo = FALSE, eval = TRUE}
+``` {r examine_risk_quartiles, echo = FALSE, eval = FALSE}
 
 ### Summarize quadrant species list by species group (e.g. CORALS1)
 spp_risk_q1 <- spp_list_q1 %>%
@@ -399,15 +318,15 @@ barchart_spp_risk_quads <- ggplot(spp_risk_quadrants1 %>%
                                 aes(x = popn_category, fill = quad, weight = pct_quad)) +
   ggtheme_plot + 
   theme(panel.grid.major.y = element_blank()) +
-  geom_bar(stat = 'count', alpha = .5) +
-  scale_fill_manual(values = c('q1 well-matched'   = 'green4', 
-                               'q2 dist-matched'   = 'greenyellow', 
-                               'q3 area-matched'   = 'orange', 
-                               'q4 poorly matched' = 'orangered2')) +
+  geom_bar(stat = 'count', alpha = .8) +
+  scale_fill_manual(values = c('q1 well-matched'   = '#4dac26', 
+                               'q2 dist-matched'   = '#b8e186', 
+                               'q3 area-matched'   = '#f1b6da', 
+                               'q4 poorly matched' = '#d01c8b')) +
   scale_y_continuous(expand = c(0, 0), limits = c(0, 1.1)) +
   geom_text(aes(label = sprintf('n = %s', n_tot_cat), y = 1.01), hjust = 0, 
             size = 2, 
-            color = 'grey20') +
+            color = 'grey30') +
   coord_flip() +
   labs(x = 'Risk category', 
        y = 'Relative proportion of species per quadrant', 
@@ -423,7 +342,7 @@ ggsave(plot = barchart_spp_risk_quads,
 
 
 <!-- # Multiple species maps per quadrant -->
-``` {r child = 'data_explore_pt3.Rmd', eval = TRUE}
+``` {r child = 'data_explore_pt3.Rmd', eval = FALSE}
 ```
 
 
@@ -432,7 +351,7 @@ ggsave(plot = barchart_spp_risk_quads,
 Breakdown maps by taxa
 
 ``` {r load data, echo = FALSE, warning = FALSE, message = FALSE}
-### use data_explore.Rmd to create this file, if it does not yet exist.
+### use data_prep.Rmd to create this file, if it does not yet exist.
 
 data_file <- file.path(dir_data, 'spp_list_w_area_trimmed.csv')
 spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
@@ -442,7 +361,7 @@ spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
 ### generate other lists
 
 spp_all_file <- file.path(dir_data, 'spp_all.csv')
-spp_all <- read.csv(spp_all_file, stringsAsFactors = FALSE) 
+spp_all <- read_csv(spp_all_file) 
 
 iucn_file <- file.path(dir_data, 'spp_iucn.csv')
 spp_iucn <- read.csv(iucn_file, stringsAsFactors = FALSE) 
@@ -454,13 +373,19 @@ spp_iucn_maps <- read.csv(iucn_maps_file, stringsAsFactors = FALSE) %>%
   filter(sciname %in% spp_iucn$sciname)   ### ditch freshwater spp
 
 spp_am_file <- file.path(dir_data, 'spp_am.csv')
-spp_am <- read.csv(spp_am_file, stringsAsFactors = FALSE)
+spp_am <- read_csv(spp_am_file)
 
 ```
 
-``` {r breakdown by taxa, echo = FALSE, message = FALSE, warning = FALSE, eval = FALSE}
+``` {r breakdown by taxa, echo = FALSE, message = FALSE, warning = FALSE, eval = TRUE}
 
 sciname_lookup <- read.csv(file.path(dir_data, 'sciname_lookups/spp_iucn_scinames.csv'), stringsAsFactors = FALSE)
+
+spp_am <- spp_am %>%
+  left_join(read_csv(file.path(dir_N, 'git-annex/globalprep/_raw_data/aquamaps/v2015/csv/speciesoccursum.csv')) %>% 
+              dplyr::select(am_sid = speciesid, class) %>%
+              unique(), 
+            by = 'am_sid')
 
 iucn_maps_class <- spp_iucn_maps %>% 
   left_join(sciname_lookup %>% 
@@ -565,44 +490,52 @@ taxa_df_long2 <- taxa_df %>%
   gather(dataset, n_spp, AquaMaps:Both) %>%
   group_by(class) %>%
   mutate(n_total = sum(n_spp, na.rm = TRUE),
-         percent = n_spp/n_total * 100)
+         percent = n_spp/n_total * 100,
+         dataset = factor(dataset, levels = c('AquaMaps', 'Both', 'IUCN')))
+
 bar_taxa2 <- ggplot(taxa_df_long2, aes(x = class, y = percent, fill = dataset)) +
   ggtheme_plot + 
-  geom_bar(stat = 'identity', alpha = .5) +
-  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
-  geom_text(aes(label = sprintf('n = %s', n_total), y = 3), 
-            size = 3, 
+  theme(panel.grid.major.x = element_blank()) +
+  geom_bar(stat = 'identity', alpha = .8) +
+#  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
+  scale_fill_manual(values = c('AquaMaps' = '#1b9e77', 'Both' = '#d95f02', 'IUCN' = '#7570b3')) +
+  geom_text(aes(label = sprintf('n = %s', n_total), y = 102), 
+            size = 2, 
             angle = 90, hjust = 0, color = 'grey30') +
   theme(axis.text.x = element_text(angle = 75, hjust = 1)) + 
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) + 
+  scale_y_continuous(expand = c(0, 0), 
+                     limits = c(0, 130),
+                     breaks = c(0, 25, 50, 75, 100)) + 
   labs(# title = 'Species maps by taxonomic class',
        x = 'Class', 
-       y = 'Percent of mapped species')
+       y = 'Percent of mapped species',
+       fill = 'Dataset')
 print(bar_taxa2)
 ggsave(filename = file.path(dir_fig, 'bar_by_taxa_all.png'), 
        width = 17.8, height = 7, units = 'cm')
 
-taxa_df_long3 <- taxa_df %>%
-  dplyr::select(class, AquaMaps = n_am_class_solo_ass, IUCN = n_iucn_class_solo, Both = n_class_both) %>%
-  gather(dataset, n_spp, AquaMaps:Both) %>%
-  group_by(class) %>%
-  mutate(n_total = sum(n_spp, na.rm = TRUE),
-         percent = n_spp/n_total * 100)
-bar_taxa3 <- ggplot(taxa_df_long3, aes(x = class, y = percent, fill = dataset)) +
-  ggtheme_plot + 
-  geom_bar(stat = 'identity', alpha = .5) +
-  scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
-  geom_text(aes(label = sprintf('n = %s', n_total), y = 3), 
-            #size = 3, 
-            angle = 90, hjust = 0, color = 'grey30') +
-  theme(axis.text.x = element_text(angle = 75, hjust = 1)) + 
-  scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) +
-  labs(# title = 'Species maps by taxonomic class, Red List-assessed only',
-       x = 'Class', 
-       y = 'Percent of assessed mapped species')
-print(bar_taxa3)
-ggsave(filename = file.path(dir_fig, 'bar_by_taxa_assessed.png'), 
-       width = 17.8, height = 6, units = 'cm')
+# taxa_df_long3 <- taxa_df %>%
+#   dplyr::select(class, AquaMaps = n_am_class_solo_ass, IUCN = n_iucn_class_solo, Both = n_class_both) %>%
+#   gather(dataset, n_spp, AquaMaps:Both) %>%
+#   group_by(class) %>%
+#   mutate(n_total = sum(n_spp, na.rm = TRUE),
+#          percent = n_spp/n_total * 100)
+#
+# bar_taxa3 <- ggplot(taxa_df_long3, aes(x = class, y = percent, fill = dataset)) +
+#   ggtheme_plot + 
+#   geom_bar(stat = 'identity', alpha = .5) +
+#   scale_fill_manual(values = c('AquaMaps' = 'red', 'Both' = 'mediumorchid', 'IUCN' = 'blue')) +
+#   geom_text(aes(label = sprintf('n = %s', n_total), y = 3), 
+#             #size = 3, 
+#             angle = 90, hjust = 0, color = 'grey30') +
+#   theme(axis.text.x = element_text(angle = 75, hjust = 1)) + 
+#   scale_y_continuous(expand = c(0, 0), limits = c(0, 100)) +
+#   labs(# title = 'Species maps by taxonomic class, Red List-assessed only',
+#        x = 'Class', 
+#        y = 'Percent of assessed mapped species')
+# print(bar_taxa3)
+# ggsave(filename = file.path(dir_fig, 'bar_by_taxa_assessed.png'), 
+#        width = 17.8, height = 6, units = 'cm')
 
 ```
 
@@ -655,6 +588,6 @@ All IUCN species richness map:
 ![figures/all_iucn_map.png](../figures/all_iucn_map.png)
 
 
-``` {r, child = 'data_explore_am_thresh.Rmd', echo = FALSE, message = FALSE, eval = TRUE}
+``` {r, child = 'data_explore_am_thresh.Rmd', echo = FALSE, message = FALSE, eval = FALSE}
 ```
 
