--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -15,18 +15,13 @@ output: html_document
 
 # Introduction
 
-<!--
-research questions: How do the two datasets differ in prediction of species distribution?  Why do they differ?  What are the implications of these differences? and how can we improve our confidence in their predictions?_ _this should also go in the abstract_
--->
-
-<!--Peer beneath the waves anywhere in the world - a moody kelp forest, a bustling coral reefscape, the frigid depths beneath a polar ice sheet, the endless blue of the open ocean - and you will find a unique ecosystem defined as much by which species are absent as by which species are abundant.--> 
-Knowing where individuals of a species live is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  This knowledge provides foundational information for 
+Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  This knowledge provides foundational information for 
  understanding species ranges and diversity,
  predicting species responses to human impacts and climate change,
  and managing and protecting species effectively.
 A rich literature tackles the many dimensions of these questions.
 
-One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. ___2013???___) and International Union for Conservation of Nature (IUCN) (IUCN 2015).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm et al. 2014 _IUCN, mostly focusing on terrestrial but some marine_, Kaschner et al. 2011), predicting range shifts (Molinos et al. 2015 _AquaMaps_, and setting conservation priorities (Klein et al. 2015 _AquaMaps_).
+One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. ___2013???___) and International Union for Conservation of Nature (IUCN) (IUCN 2015).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm et al. 2014 _IUCN, mostly focusing on terrestrial but some marine_, Kaschner et al. 2011), predicting range shifts (Molinos et al. 2015 _AquaMaps_), and setting conservation priorities (Klein et al. 2015 _AquaMaps_).
 
 ___BSH:___ _I think Julie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?_  
 
@@ -34,9 +29,9 @@ ___CCO:___ _What about age - AquaMaps is pretty recent (2006 at earliest); befor
 
 _Three foundational papers relating to AquaMaps (Kaschner et al. 2006, 2011; Ready et al. 2010) have been cited a total of 315 times._
 
-The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006) (Jetz 2008?).
+The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006, Jetz et al. 2008).
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
+To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
 
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight the possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.
 
@@ -46,77 +41,93 @@ We then reexamine two recent marine biodiversity studies - an assessment of the 
 
 ## How and why the datasets differ
 
-The IUCN publishes species range maps, bundled by taxonomic groups, based on expert input on spatial boundaries of a given species' "limits of distribution" (IUCN 2015) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  In contrast, AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species (Kaschner et al. 2006, Ready et al. 2010)
+The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (IUCN 2015) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  In contrast, AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of "probability of occurrence" for each species (Kaschner et al. 2006, Ready et al. 2010).  Studies frequently define "presence" for AquaMaps by applying a probability threshold, e.g. 40% or greater probability of occurrence (Halpern et al. 2012, 2015).  
 
-The methodologies behind these datasets imply differences in prediction of species distribution due to errors of commission (falsely _(erroneously? less accusatory, but an annoying word)_ indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps generally include large commission errors, while predicted distribution models such as AquaMaps will likely include fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range <!-- from Rondinini: Omission errors lead to identifying networks of areas for conservation action that are smaller than required and centred on known species occurrences, thus affecting the comprehensiveness, representativeness and efficiency of selected areas. Commission errors lead to selecting areas not relevant to conservation, thus affecting the representativeness and adequacy of reserve network --> (Rondinini et al. 2006). 
-<!-- This study basically predicted some of the problems we’re seeing here and predicts implications; I’d like to meaningfully acknowledge it, but not sure how deeply to get into it.  Later comments ask about whether to include the omission/commission terminology. 
+The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (Rondinini et al. 2006).  ___By comparing maps resulting from each methodology, we can identify and possibly address mechanistic causes for each type of error.___
 
-BSH: I haven’t read the paper, but it sounds like we need to acknowledge what was already discussed/done there.  This may actually simplify things, such that we condense the first three paragraphs of this section into a single paragraph that restates what that paper found (and cite it) and add anything else we want to point out.  But we will definitely need a succinct statement about how our paper moves well beyond what that paper did. Not sure best approach without reading the paper.-->
+<!--BSH: I haven’t read the paper, but it sounds like we need to acknowledge what was already discussed/done there.  This may actually simplify things, such that we condense the first three paragraphs of this section into a single paragraph that restates what that paper found (and cite it) and add anything else we want to point out.  But we will definitely need a succinct statement about how our paper moves well beyond what that paper did. Not sure best approach without reading the paper.-->
 
-The two datasets have notably different taxonomic (Fig. 1A) and regional (Fig. 1B,C) coverage. IUCN-mapped species focus on tropical latitudes and away from the Atlantic and Eastern Pacific compared to AquaMaps-mapped species. These differences can be mitigated by using both datasets, but the underlying methodological differences complicate such direct comparisons.
+The two datasets have notably different taxonomic (Fig. 1) and regional (Fig. 2) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drops quickly beyond 30°N and 30°S, while species counts for AquaMaps remains robust well into temperate latitudes.  The longitude frequency plots show a slight bias in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
 
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
 n_q1 <- nrow(spp_list_quads %>% filter(quad == 'q1'))
 n_q2 <- nrow(spp_list_quads %>% filter(quad == 'q2'))
-n_q2_am_sm  <- nrow(spp_list_quads %>% filter(sm_range == 'AM' & quad == 'q2'))
+# n_q2_am_sm  <- nrow(spp_list_quads %>% filter(sm_range == 'AM' & quad == 'q2'))
 n_q2_corals <- nrow(spp_list_quads %>% filter(str_detect(tolower(spp_group), 'coral') & quad == 'q2'))
 n_corals    <- nrow(spp_list_quads %>% filter(str_detect(tolower(spp_group), 'coral')))
 n_q3 <- nrow(spp_list_quads %>% filter(quad == 'q3'))
 n_q4 <- nrow(spp_list_quads %>% filter(quad == 'q4'))
 
-n_q4_datapoor <- nrow(spp_list_quads %>% filter(quad == 'q4' & occurcells < 10))
-p_q4_datapoor <- round(n_q4_datapoor/n_q4 * 100, 1)
-n_q123_datapoor <- nrow(spp_list_quads %>% filter(quad != 'q4' & occurcells < 10))
-p_q123_datapoor <- round(n_q123_datapoor/n_spp_both * 100, 1)
+# n_q4_datapoor <- nrow(spp_list_quads %>% filter(quad == 'q4' & occurcells < 10))
+# p_q4_datapoor <- round(n_q4_datapoor/n_q4 * 100, 1)
+# n_q123_datapoor <- nrow(spp_list_quads %>% filter(quad != 'q4' & occurcells < 10))
+# p_q123_datapoor <- round(n_q123_datapoor/n_spp_both * 100, 1)
 
-n_q4_rev <- nrow(spp_list_quads %>% filter(quad == 'q4' & !is.na(reviewed)))
-p_q4_rev <- round(n_q4_rev/n_q4 * 100, 1)
-n_q123_rev <- nrow(spp_list_quads %>% filter(quad != 'q4' &  !is.na(reviewed)))
-p_q123_rev <- round(n_q123_rev/n_spp_both * 100, 1)
+# n_q4_rev <- nrow(spp_list_quads %>% filter(quad == 'q4' & !is.na(reviewed)))
+# p_q4_rev <- round(n_q4_rev/n_q4 * 100, 1)
+# n_q123_rev <- nrow(spp_list_quads %>% filter(quad != 'q4' &  !is.na(reviewed)))
+# p_q123_rev <- round(n_q123_rev/n_spp_both * 100, 1)
 
-quad_count_means <- read_csv(file.path(dir_data, 'quads_data_poor.csv')) %>%
-  arrange(quad)
-dp_med_am_q4    <- quad_count_means$med_occurcells[4]
-dp_med_am_q123  <- quad_count_means$med_occurcells_total[1]
-dp_med_occ_q4   <- quad_count_means$med_occ[4]
-dp_med_occ_q123 <- quad_count_means$med_occ_total[1]
+# quad_count_means <- read_csv(file.path(dir_data, 'quads_data_poor.csv')) %>%
+#   arrange(quad)
+# dp_med_am_q4    <- quad_count_means$med_occurcells[4]
+# dp_med_am_q123  <- quad_count_means$med_occurcells_total[1]
+# dp_med_occ_q4   <- quad_count_means$med_occ[4]
+# dp_med_occ_q123 <- quad_count_means$med_occ_total[1]
+
+spp_quads_occ <- read_csv(file.path(dir_data, 'spp_quads_occ.csv'))
+med_occ_q4   <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad == 'q4']))
+med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q1', 'q2', 'q3')]))
 
 ```
 
-To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). A general negative linear pattern emerges, <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> suggesting that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
+To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e. where on the map) against the area alignment (ratio of smaller range area to larger range area, i.e. how much of the map) for each shared species (Fig. 3A). 
+ This analysis revealed a general negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
+ AquaMaps tends to extrapolate species ranges beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
-___directly address the cluster along the top right of the plot?___
+The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 3B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
 
-By dividing the map-paired species into quadrants, we highlight different categories of relationships that in turn help further explain the general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges agree in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
-
-The extent-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. <!-- BSH: maybe include 2-3 examples as figures in the SOM and refer to them here.-->
+The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. ___See supplemental information for maps that highlight this issue.___ _should there just be a blanket "see SOM for maps that typify each quadrant"?_
 Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
 
-Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar extents are meaningless when the distributions are poorly aligned.
+Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are meaningless when the distributions are poorly aligned.
 
-The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (summing (averaging?) OBIS and GBIF occurrences) for this quadrant is `r dp_med_am_q4`, compared to a median of `r dp_med_am_q123` for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
+The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging OBIS and GBIF occurrences) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
+
+___While we examined IUCN Red List extinction risk categories by quadrant, we found no compelling patterns.  See SOM for details.___
 
 -----
 
 # Implications
 
-Clear and significant differences in species range descriptions between AquaMaps and IUCN range maps, due to method-driven differences in errors of commission and omission.  To examine the implications of these differences, we replicated two recent studies, varying only the prioritization of one data set over the other.
+Clear and significant differences in species range descriptions between AquaMaps and IUCN range maps due to method-driven differences in commission and omission errors.  To examine the implications of these differences, we replicated two recent studies, varying only the prioritization of one data set over the other.
 
-**Case Study: The Ocean Health Index** <!--BSH: I stopped editing and worksmithing here and just focused on addressing your comments/questions from here on-->
+**Case Study: The Ocean Health Index**
 
-The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from both IUCN and AquaMaps datasets, prioritizing IUCN data for the `r n_spp_both` species included in both sources.  OHI currently uses a probability threshold of 40% to determine species presence for AquaMaps data. 
+The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from both IUCN and AquaMaps datasets, prioritizing IUCN data for the `r format(n_spp_both, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data. 
 
-We recalculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Given that only `r n_spp_both` species overlap out of `r n_spp_all`, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained as many as 5 points while others dropped up to 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined results in a more dire assessment of species conservation status. 
+We recalculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig4'>Fig. 4</a>).  
+ Reducing the threshold increases the apparent range of a species; the slight decrease in average score for scenario 1 suggests increased spatial representation of threatened species.  
+ The slight bump in mean score for scenario 2 may indicate a small increase in spatial representation of low-risk species, a small decrease in spatial representation of high-risk species, or a combination of both. 
+ The large decrease shown in scenario 3 indicates that a zero threshold greatly increases the spatial representation of high-risk species.  
+ 
+Given that only `r format(p_both_all, big.mark = ',')` percent of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained up to 5 points while others dropped as many as 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined can result in a more dire assessment of species conservation status. 
+
+
 
 -----  
 
 **Case Study: MPA Gap Analysis**
 
-Klein et al. (2015) compared the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and to identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  The study determined that currently established MPAs (IUCN categories I through IV overlapping with marine areas) are woefully inadequate in protecting marine biodiversity; 90.5% of species have less than 5% of their overall range represented within MPAs and 1.4% of species have no protection at all ("gap" species).
+Klein et al. (2015) compare the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  The study determined that the global MPA network is woefully inadequate in protecting marine biodiversity: 90.5% of species have less than 5% of their overall range represented within MPAs and 1.4% of species have no protection at all ("gap" species).
 
- (<a href = '#fig4'>Figure 4</a>) displays the results of applying this methodology under several different scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 data and a 0% threshold sets the most meaningful comparison) we found a five-fold increase in the proportion of gap species (6.4% of species vs 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network.
+ (<a href = '#fig5'>Figure 5</a>) displays the results of applying this methodology under new scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 AquaMaps data and a 0% threshold sets the most meaningful comparison) we found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
+ 
+___Should end with a more solid statement of how choosing one or the other datasets/thresholds would have different results – using our calculated differences.  JA___
+
+___If you have room, I think you could add a bit more interpretation of these results here. Could discuss the commission and omission stuff here too to describe these somewhat non-intuitive results??? CS___
 
 -----
 
